fixed issue with viewport on mobile devices

--- a/odin-recipes/styles.css
+++ b/odin-recipes/styles.css
@@ -48,3 +48,42 @@ p{
     text-align: center;
 
 }
+
+/* if viewing on a phone  or tablet*/
+
+@media (min-width: 768px) {
+    .image {
+        height: 400px;
+        width: 300px;
+    }
+}
+
+@media (max-width: 767px) {
+    .flex-container {
+        flex-direction: column;
+        padding: 0;
+    }
+
+    .flex-container > div {
+        width: 100%;
+        margin: 10px 0;
+        padding: 0;
+    }
+
+    .image {
+        width: 100%;
+        height: auto;
+    }
+
+    h1 {
+        font-size: 30px;
+    }
+
+    h2 {
+        font-size: 20px;
+    }
+
+    p {
+        font-size: 20px;
+    }
+}
